# redpak-binding

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MAINTAINERS  README.md
binding/: CMakeLists.txt  redpak-binding-apidef.h  redpak-binding-apidef.json.in  redpak-binding.c
binding/utils/: utils.c  utils.h
conf.d/: CMakeLists.txt
conf.d/cmake/: config.cmake
conf.d/wgt/: config.xml.in
docs/: 1-architecture.md  2-installation.md  3-configuration.md  4-usage.md  5-ui.md  6-errata.md  api-services-book.yml  redpak-binding-book.yml
docs/videos/: binding_graphui.webm  config_view.webm
htdocs/: index.html
